--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Build-Depends: debhelper (>= 11), cmake, pkg-config,
   liblilv-dev, libsratom-dev, libsord-dev, libserd-dev,
   libsuil-dev, libgtk2.0-dev, libgtkmm-2.4-dev,
   libx11-dev, x11proto-core-dev, libfontconfig-dev, libjpeg-dev,
-  libaubio-dev (>= 0.4.1), vst3sdk-dev (>= 3.6.14)
+  libaubio-dev (>= 0.4.1)
 Standards-Version: 3.9.7
 
 Package: qtractor
